--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -10,7 +10,7 @@ parameters:
 
 framework:
     #esi:             ~
-    #translator:      { fallbacks: ["%locale%"] }
+    translator:      { fallbacks: ["en"] }
     secret:          "%secret%"
     router:
         resource: "%kernel.root_dir%/config/routing.yml"
@@ -64,3 +64,47 @@ swiftmailer:
     username:  "%mailer_user%"
     password:  "%mailer_password%"
     spool:     { type: memory }
+
+# Easyadmin Configuration
+easy_admin:
+    site_name: 'Pilgrims <em style="font-size: 80%;">Admin.</em>'
+    list:
+        max_results: 30
+    design:
+        brand_color: '#00134a'
+    entities:
+        Site:
+            class: AppBundle\Entity\Site
+            label: 'Sites'
+            list:
+                title: '%%entity_label%%'
+        CultObjectsKeyword:
+            class: AppBundle\Entity\CultObjectsKeyword
+            label: 'Cult Objects Kw'
+            list:
+                title: 'Cult Objects Keywords'
+        HistoricalSource:
+            class: AppBundle\Entity\HistoricalSource
+            label: 'Historical Sources'
+            list:
+                title: '%%entity_label%%'
+        Literature:
+            class: AppBundle\Entity\Literature
+            label: 'Literatures'
+            list:
+                title: '%%entity_label%%'
+        MemorialFunctionsKeyword:
+            class: AppBundle\Entity\MemorialFunctionsKeyword
+            label: 'Memorial Functions Kw'
+            list:
+                title: 'Memorial Functions Keywords'
+        Source:
+            class: AppBundle\Entity\Source
+            label: 'Sources'
+            list:
+                title: '%%entity_label%%'
+        Toponym:
+            class: AppBundle\Entity\Toponym
+            label: 'Toponyms'
+            list:
+                title: '%%entity_label%%'
