--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
         "sensio/distribution-bundle": "~5.0",
         "sensio/framework-extra-bundle": "^3.0.2",
         "incenteev/composer-parameter-handler": "~2.0",
-        "javiereguiluz/easyadmin-bundle": "^1.12"
+        "javiereguiluz/easyadmin-bundle": "^1.12",
+        "vich/uploader-bundle": "^0.14.0"
     },
     "require-dev": {
         "sensio/generator-bundle": "~3.0",
