add capistrano and env

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,13 @@
 /vendor/
 /web/bundles/
 /web/uploads
+
+# Capistrano
+/Capfile
+/Gemfile
+/Gemfile.lock
+/config/deploy/*
+/config/deploy.rb
+/lib/capistrano/*
+/.bundle/*
+/log
