--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -22,3 +22,6 @@ security:
 
             # form_login: ~
             # http://symfony.com/doc/current/cookbook/security/form_login_setup.html
+
+            remote_user:
+                user: REMOTE_USER
