--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -2,6 +2,11 @@
 # http://symfony.com/doc/current/book/security.html
 security:
 
+    # http://symfony.com/doc/current/book/security.html#where-do-users-come-from-user-providers
+    providers:
+        in_memory:
+            memory: ~
+
     firewalls:
         # disables authentication for assets and the profiler, adapt it according to your needs
         dev:
@@ -11,4 +16,3 @@ security:
         admin:
             pattern: ^/admin
             remote_user:
-                user: REMOTE_USER
