add an anonymous auth

--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -20,3 +20,5 @@ security:
             remote_user:
                 provider: in_memory
             access_denied_url: /
+        main:
+            anonymous: ~
