--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -14,11 +14,13 @@ security:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
-
+        main:
+            anonymous: ~
         admin:
             pattern: ^/admin
             remote_user:
                 provider: in_memory
-            access_denied_url: /
-        main:
-            anonymous: ~
+
+    access_control:
+        - { path: ^/, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/admin, roles: ROLE_USER }
