role_user for admin

--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -22,5 +22,5 @@ security:
                 provider: in_memory
 
     access_control:
-        - { path: ^/admin, roles: ROLE_ADMIN }
+        - { path: ^/admin, roles: ROLE_USER }
         - { path: ^/, roles: IS_AUTHENTICATED_ANONYMOUSLY }
