change base_dn for ldap

--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -11,7 +11,7 @@ security:
         unifr_ldap:
             ldap:
                 service: ldap
-                base_dn: dc=unifr,dc=ch
+                base_dn: 'ou=people,ou=uni fribourg,dc=unifr,dc=ch'
                 search_dn: 'ou=people,ou=uni fribourg,dc=unifr,dc=ch'
                 search_password: Kr?4vP9a5
                 default_roles: ROLE_USER
