add a redirect_url to login_path

--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -14,7 +14,7 @@ security:
         provider: shib
         user: REMOTE_USER
       form_login:
-        login_path: https://elearning.unifr.ch/Shibboleth.sso/Login
+        login_path: https://elearning.unifr.ch/Shibboleth.sso/Login?target=https://elearning.unifr.ch/pilgrims/admin
         check_path: /admin
     # disables authentication for assets and the profiler
     dev:
