--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -5,8 +5,7 @@ security:
     shib:
       memory:
         users:
-            name: '378257@unifr.ch'
-            roles: 'ROLE_ADMIN'
+            - { name: '378257@unifr.ch', roles: ['ROLE_ADMIN'] }
   firewalls:
     admin:
       pattern: ^/admin
