--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -5,9 +5,7 @@ security:
     shib:
       memory:
         users:
-            ***REMOVED***:
-              name: '378257@unifr.ch'
-              roles: ['ROLE_ADMIN']
+          - { name: 378257@unifr.ch, roles: 'ROLE_ADMIN' }
   firewalls:
     admin:
       pattern: ^/admin
