dont force anonymous

--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -11,7 +11,7 @@ security:
       pattern: ^/admin
       remote_user:
         provider: shib
-      anonymous: true
+      anonymous: ~
     # disables authentication for assets and the profiler
     dev:
       pattern: ^/(_(profiler|wdt)|css|images|js)/
