use anon for admin

--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -18,4 +18,4 @@ security:
       security: false
   access_control:
         # require ROLE_ADMIN for /admin*
-        - { path: ^/admin, roles: ROLE_ADMIN }
+        - { path: ^/admin, roles: IS_AUTHENTICATED_ANONYMOUSLY }
