revert security for now

--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -1,21 +1,24 @@
 # To get started with security, check out the documentation:
 # http://symfony.com/doc/current/book/security.html
 security:
-  providers:
-    shib:
-      memory:
-        users:
-          - { name: '378257@unifr.ch', roles: 'ROLE_ADMIN' }
-  firewalls:
-    admin:
-      pattern: ^/admin
-      remote_user:
-        provider: shib
-      anonymous: true
-    # disables authentication for assets and the profiler
-    dev:
-      pattern: ^/(_(profiler|wdt)|css|images|js)/
-      security: false
-  access_control:
-        # require ROLE_ADMIN for /admin*
-        - { path: ^/admin, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+
+    # http://symfony.com/doc/current/book/security.html#where-do-users-come-from-user-providers
+    providers:
+        in_memory:
+            memory: ~
+
+    firewalls:
+        # disables authentication for assets and the profiler, adapt it according to your needs
+        dev:
+            pattern: ^/(_(profiler|wdt)|css|images|js)/
+            security: false
+
+        main:
+            anonymous: ~
+            # activate different ways to authenticate
+
+            # http_basic: ~
+            # http://symfony.com/doc/current/book/security.html#a-configuring-how-your-users-will-authenticate
+
+            # form_login: ~
+            # http://symfony.com/doc/current/cookbook/security/form_login_setup.html
