--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -170,3 +170,15 @@ assetic:
     use_controller: false
     filters:
         cssrewrite: ~
+
+# LiipImagineBundle
+liip_imagine:
+  resolvers:
+    default:
+      web_path: ~
+  filter_sets:
+    cache: ~
+    index_thumb:
+      quality: 100
+      filters:
+        thumbnail: { size: [300, 300], mode: outbound }
