--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,7 +1,9 @@
 easy_admin_bundle:
-    resource: "@EasyAdminBundle/Controller/"
-    type:     annotation
-    prefix:   /admin
+  resource: "@EasyAdminBundle/Controller/"
+  type:     annotation
+  prefix:   /admin
 app:
-    resource: "@AppBundle/Controller/"
-    type:     annotation
+  resource: "@AppBundle/Controller/"
+  type:     annotation
+_liip_imagine:
+  resource: "@LiipImagineBundle/Resources/config/routing.xml"
