--- a/app/config/config_prod.yml
+++ b/app/config/config_prod.yml
@@ -27,5 +27,7 @@ monolog:
         console:
             type:  console
 
-parameters:
-  app.path.site_images: /pilgrims/uploads/images/sites
+vich_uploader:
+    mappings:
+        site_image:
+            uri_prefix: pilgrims%app.path.site_images%
