fix uploads path

--- a/app/config/config_prod.yml
+++ b/app/config/config_prod.yml
@@ -26,3 +26,6 @@ monolog:
             level: debug
         console:
             type:  console
+
+parameters:
+    app.path.site_images: /pilgrims/uploads/images/sites
