fix images path

--- a/app/config/config_prod.yml
+++ b/app/config/config_prod.yml
@@ -27,5 +27,7 @@ monolog:
         console:
             type:  console
 
-parameters:
-    uri_prefix: /pilgrims%app.path.site_images%
+vich_uploader:
+    mappings:
+        site_image:
+            uri_prefix: /pilgrims%app.path.site_images%
