--- a/app/config/config_prod.yml
+++ b/app/config/config_prod.yml
@@ -31,3 +31,6 @@ vich_uploader:
     mappings:
         site_image:
             uri_prefix: /pilgrims%app.path.site_images%
+
+parameters:
+    app.path.full.site_images: /pilgrims%app.path.site_images
