update liip_imagine config for prod

--- a/app/config/config_prod.yml
+++ b/app/config/config_prod.yml
@@ -27,10 +27,16 @@ monolog:
         console:
             type:  console
 
+parameters:
+    app.path.full.site_images: /pilgrims%app.path.site_images%
+
 vich_uploader:
     mappings:
         site_image:
             uri_prefix: /pilgrims%app.path.site_images%
 
-parameters:
-    app.path.full.site_images: /pilgrims%app.path.site_images%
+liip_imagine:
+  resolvers:
+        default:
+            web_path:
+                web_root: %kernel.root_dir%/../web/.. # %kernel.root_dir%/../web
