--- a/app/config/config_dev.yml
+++ b/app/config/config_dev.yml
@@ -38,4 +38,4 @@ assetic:
     use_controller: true
 
 parameters:
-    app.path.full.site_images: %app.path.site_images
+    app.path.full.site_images: %app.path.site_images%
