--- a/app/config/config_prod.yml
+++ b/app/config/config_prod.yml
@@ -39,4 +39,4 @@ liip_imagine:
   resolvers:
         default:
             web_path:
-                web_root: %kernel.root_dir%/../web # %kernel.root_dir%/../web
+                web_root: %kernel.root_dir%/../web/hello # %kernel.root_dir%/../web
