add all NTE to admin

--- a/app/config/security_prod.yml
+++ b/app/config/security_prod.yml
@@ -4,6 +4,10 @@ security:
       memory:
         users:
           - { name: '***REMOVED***', roles: 'ROLE_ADMIN' }
+          - { name: '***REMOVED***', roles: 'ROLE_ADMIN' }
+          - { name: '***REMOVED***', roles: 'ROLE_ADMIN' }
+          - { name: '***REMOVED***', roles: 'ROLE_ADMIN' }
+          - { name: '***REMOVED***', roles: 'ROLE_ADMIN' }
   firewalls:
     dev:
       pattern: ^/(_(profiler|wdt)|css|images|js)/
