add members to security access

--- a/app/config/security_prod.yml
+++ b/app/config/security_prod.yml
@@ -8,6 +8,13 @@ security:
           - { name: '***REMOVED***', roles: 'ROLE_ADMIN' }
           - { name: '***REMOVED***', roles: 'ROLE_ADMIN' }
           - { name: '***REMOVED***', roles: 'ROLE_ADMIN' }
+          - { name: '***REMOVED***', roles: 'ROLE_ADMIN' }
+          - { name: '***REMOVED***', roles: 'ROLE_ADMIN' }
+          - { name: '***REMOVED***', roles: 'ROLE_ADMIN' }
+          - { name: '***REMOVED***', roles: 'ROLE_ADMIN' }
+          - { name: '***REMOVED***', roles: 'ROLE_ADMIN' }
+          - { name: '***REMOVED***', roles: 'ROLE_ADMIN' }
+          - { name: '***REMOVED***', roles: 'ROLE_ADMIN' }
   firewalls:
     dev:
       pattern: ^/(_(profiler|wdt)|css|images|js)/
