--- a/app/config/security_prod.yml
+++ b/app/config/security_prod.yml
@@ -19,12 +19,10 @@ security:
     dev:
       pattern: ^/(_(profiler|wdt)|css|images|js)/
       security: false
-    main:
-      anonymous: ~
-#    admin:
-#      pattern: ^/admin
-#      remote_user:
-#        provider: shib
-#        user: ***REMOVED***
-#  access_control:
-#    - { path: ^/admin, roles: ROLE_ADMIN }
+    admin:
+      pattern: ^/admin
+      remote_user:
+        provider: shib
+        user: ***REMOVED***
+  access_control:
+    - { path: ^/admin, roles: ROLE_ADMIN }
